<resources>
    <string name="app_name">College Hub</string>


    <!-- Subjects Name -->
    <string name="eng">English</string>
    <string name="math">Mathematics</string>
    <string name="bee">BEE</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="chapter">Chapter No.</string>
    <string name="hello_blank_fragment">Hello blank</string>
    <string name="new_info">Whats New</string>
    <string name="news">News</string>
    <string name="about_app">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- B.tech. Department Names -->

    <string-array name="department">
        <item>Packaging Technology</item>
        <item>Printing Technology</item>
        <item>C.S.E.</item>
        <item>CSE A.I.</item>
        <item>Electrical Engineering</item>
        <item>Electronics</item>
        <item>Civil Engineering</item>
        <item>Food Technology</item>
        <item>Mechanical Engineering</item>
        <item>Information Technology</item>
    </string-array>
    <string-array name="semester">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
        <item>Sixth</item>
        <item>Seventh</item>
        <item>Eigth</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Home Screen -->

    <!-- Chapters/Notes Screen -->
    <string name="notes_screen">Notes</string>

    <!-- PDF View Screen -->
    <string name="pdf">PDF</string>

    <!-- Login & Logout Screen -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <!--Profile section-->
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="contact">Contact Us</string>
    <string name="help">Help Centre</string>
    <string name="about">About Us</string>
    <string name="report">Report Bug</string>
    <string name="policy">Terms and Privacy Policy</string>
    <string name="app_version">App Version</string>
    <string name="version_number">v.1.0.0</string>
    <string name="update_app">Check Update</string>
</resources>